fixed overlapping content

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -295,7 +295,6 @@ html {
 /* smykkegalleri */
 #smykke-oversigt{
     margin-top: 6vh;
-    height: 95vh;
     max-width: 1920px;
     margin: auto;
 }
